@@ -19,6 +19,13 @@
       <charset>us-ascii</charset>
     </text>
   </lang>
+  <autodetect>
+    <usb>
+      <commandset>PJL,HBP</commandset>
+      <manufacturer>Brother</manufacturer>
+      <model>HL-2140 series</model>
+    </usb>
+  </autodetect>
   <functionality>B</functionality>
   <driver>hpijs-pcl5e</driver>
   <comments>
