@@ -1,5 +1,7 @@
 2010-04-16  Tim Waugh <twaugh@redhat.com>
 
+	* db/source/printer/Brother-HL-2140.xml: Added IEEE 1284
+	  Device ID (RH bug #577863).
 	* db/source/printer/HP-OfficeJet_6200.xml: Corrected IEEE 1284
 	  Device ID (RH bug #215063).
 	* db/source/printer/HP-PSC_2400.xml: Corrected IEEE 1284
